WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93840
Relative units are not set when the canvas has no parent
https://bugs.webkit.org/show_bug.cgi?id=93840
Summary
Relative units are not set when the canvas has no parent
Thiago Marcos P. Santos
Reported
2012-08-13 06:36:31 PDT
The spec says that in this case, it should be relative to the defaults (10px sans-serif).
Attachments
Patch
(12.85 KB, patch)
2012-08-13 08:55 PDT
,
Thiago Marcos P. Santos
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from gce-cr-linux-02
(462.04 KB, application/zip)
2012-08-13 17:10 PDT
,
WebKit Review Bot
no flags
Details
Patch
(12.88 KB, patch)
2012-08-14 04:56 PDT
,
Thiago Marcos P. Santos
no flags
Details
Formatted Diff
Diff
Patch
(13.70 KB, patch)
2012-08-14 08:47 PDT
,
Thiago Marcos P. Santos
no flags
Details
Formatted Diff
Diff
Patch
(13.74 KB, patch)
2012-08-14 09:24 PDT
,
Thiago Marcos P. Santos
no flags
Details
Formatted Diff
Diff
Patch
(13.78 KB, patch)
2012-08-15 01:56 PDT
,
Thiago Marcos P. Santos
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Thiago Marcos P. Santos
Comment 1
2012-08-13 08:55:04 PDT
Created
attachment 158011
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2012-08-13 09:22:03 PDT
Julien can you have a look?
WebKit Review Bot
Comment 3
2012-08-13 17:10:51 PDT
Comment on
attachment 158011
[details]
Patch
Attachment 158011
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/13494273
New failing tests: http/tests/cache/post-redirect-get.php platform/chromium/virtual/gpu/fast/canvas/canvas-font-ex-units-crash.html http/tests/cache/post-with-cached-subresources.php fast/canvas/canvas-font-ex-units-crash.html
WebKit Review Bot
Comment 4
2012-08-13 17:10:57 PDT
Created
attachment 158149
[details]
Archive of layout-test-results from gce-cr-linux-02 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-02 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Thiago Marcos P. Santos
Comment 5
2012-08-14 04:56:36 PDT
Created
attachment 158297
[details]
Patch
Thiago Marcos P. Santos
Comment 6
2012-08-14 04:58:49 PDT
I have to update this patch after
bug 93910
lands.
Thiago Marcos P. Santos
Comment 7
2012-08-14 08:47:41 PDT
Created
attachment 158342
[details]
Patch
Kenneth Rohde Christiansen
Comment 8
2012-08-14 08:54:16 PDT
Comment on
attachment 158342
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=158342&action=review
> LayoutTests/ChangeLog:9 > + and fixed wrong test cases.
updated test case which was fixed by the W3C
Thiago Marcos P. Santos
Comment 9
2012-08-14 09:24:53 PDT
Created
attachment 158344
[details]
Patch
WebKit Review Bot
Comment 10
2012-08-14 12:49:37 PDT
Comment on
attachment 158344
[details]
Patch Rejecting
attachment 158344
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: sts/2d.text.font.parse.size.percentage-expected.txt' patching file LayoutTests/platform/mac/canvas/philip/tests/2d.text.font.parse.size.percentage.default-expected.txt rm 'LayoutTests/platform/mac/canvas/philip/tests/2d.text.font.parse.size.percentage.default-expected.txt' patching file LayoutTests/platform/qt/Skipped Hunk #1 succeeded at 2110 (offset -1 lines). Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue/ Full output:
http://queues.webkit.org/results/13504290
Thiago Marcos P. Santos
Comment 11
2012-08-15 01:56:30 PDT
Created
attachment 158526
[details]
Patch
WebKit Review Bot
Comment 12
2012-08-15 03:27:35 PDT
Comment on
attachment 158526
[details]
Patch Clearing flags on attachment: 158526 Committed
r125663
: <
http://trac.webkit.org/changeset/125663
>
WebKit Review Bot
Comment 13
2012-08-15 03:27:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug