Relative units are not set when the canvas has not parent https://bugs.webkit.org/show_bug.cgi?id=93840

Patch by Thiago Marcos P. Santos <thiago.santos@intel.com> on 2012-08-15
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Set the default font when no parent style is set. It will make
possible to apply relative units when a parent is not set.

No new tests, unskipped the existing ones.

* css/StyleBuilder.cpp:
(WebCore::ApplyPropertyFontSize::applyValue):
Make it possible to apply relative units if a parent style exist but
not a parent node. It works like this for em and ex, but not for
percent units.
* html/canvas/CanvasRenderingContext2D.cpp:
(WebCore):
(WebCore::CanvasRenderingContext2D::setFont):

LayoutTests:

Unskipped tests that will now pass, removed wrong expectations
and updated test case which was fixed by the W3C.

* canvas/philip/tests/2d.text.font.parse.size.percentage.default.html:
This test case was fixed on W3C upstream:
https://www.w3.org/Bugs/Public/show_bug.cgi?id=18522
* fast/canvas/canvas-font-ex-units-crash-expected.txt:
* fast/canvas/script-tests/canvas-font-ex-units-crash.js:
* platform/chromium/TestExpectations:
* platform/chromium/canvas/philip/tests/2d.text.font.parse.size.percentage-expected.txt: Removed.
* platform/chromium/canvas/philip/tests/2d.text.font.parse.size.percentage.default-expected.txt: Removed.
* platform/efl/Skipped:
* platform/gtk/TestExpectations:
* platform/mac/TestExpectations:
* platform/mac/canvas/philip/tests/2d.text.font.parse.size.percentage-expected.txt: Removed.
* platform/mac/canvas/philip/tests/2d.text.font.parse.size.percentage.default-expected.txt: Removed.
* platform/qt/Skipped:

Canonical link: https://commits.webkit.org/111922@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125663 268f45cc-cd09-0410-ab3c-d52691b4dbfc