LayoutTests/fast/canvas/script-tests/canvas-font-ex-units-crash.js
@@ -2,6 +2,10 @@ description("Test that setting a font with size in 'ex' units doesn't crash.");
 
 ctx = document.createElement('canvas').getContext('2d');
 
-// Relative units doesn't work when the canvas has no parent. See bug 93840.
 ctx.font = "5ex sans-serif";
-shouldBe("ctx.font = '0px sans-serif'; ctx.font", "'0px sans-serif'");
+
+size = parseInt(ctx.font.substr(0, 2));
+family = ctx.font.substr(5);
+
+shouldBeCloseTo("size", 25, 10);
+shouldBe("family", "'sans-serif'");
